# dino-park-fossil

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.local  README.md  buildspec.yml  do.sh  myke.yml
.github/workflows/: rust.yml
ci/: install_deps.sh
dev/: docker-compose.yml  settings.json
k8s/: Chart.yaml  values.yaml
k8s/templates/: deployment.yaml  service.yaml
k8s/values/: dev.yaml  prod.yaml  test.yaml
src/: error.rs  main.rs  name.rs  scope.rs  settings.rs
src/retrieve/: app.rs  loader.rs  mod.rs  retriever.rs  uuid.rs
src/scale/: app.rs  convert.rs  mod.rs
src/send/: app.rs  mod.rs  operations.rs  resize.rs  saver.rs  sender.rs
src/storage/: loader.rs  mod.rs  name.rs  saver.rs
src/storage/loader/: filesystem.rs  mod.rs  s3.rs
src/storage/saver/: filesystem.rs  mod.rs  s3.rs
src/tests/: mod.rs
terraform/codebuild/: main.tf  outputs.tf  provider.tf  variables.tf
terraform/dev/: provider.tf  s3.tf
terraform/prod/: provider.tf  s3.tf
terraform/test/: provider.tf  s3.tf
tests/data/: dino.data
